Closed Bug 76654 Opened 23 years ago Closed 23 years ago

ActiveX control does not use profiles

Categories

(Core Graveyard :: Embedding: ActiveX Wrapper, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9

People

(Reporter: adamlock, Assigned: adamlock)

Details

(Whiteboard: 0.9)

Attachments

(2 files)

The ActiveX control doesn't set a default profile at startup which can lead to 
problems with the cache and other areas. Put some code into the initialisation 
routines to set the profile.
Submitting for 0.9 approval
Whiteboard: 0.9
What happens if the MozillaControl profile already exists?  I see that you
always try to create it.
Good point, I thought the method didn't do anything if it already existed. 
Second patch coming will fix that
r/sr/a=blizzard for 0.9

You should find another rubber stamping reviewer, though.
r=ccarlen. I'd still encourage checking out what gtkWidget does with a
directoryServiceProvider. It's low overhead, you can control where the "profile"
dir is easily and it won't add profiles to mozilla.
Fix is checked in.

I have opened bug 76654 to deal with the broader issue of which profile 
mechanism is right for the control.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9
Oops, I meant bug 76664
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: