Sets profile during initialisation to ensure directory locations, cache, cookies etc. all work correctly for control. b=76654, a=blizzard@mozilla.org, sr=blizzard@mozilla.org, r=ccarlen@netscape.com